[package]
name = "disk-spinner"
description = "A burn-in tool for spinning rust HDDs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/boinkor-net/disk-spinner"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
version = "0.3.0"
edition = "2021"

[features]
default = []
shishua-cli = []

[dependencies]
aes = "0.8.4"
aligned-buffer = "0.2.0"
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
ctr = "0.9.2"
indicatif = "0.18.3"
lazy_static = "1.5.0"
libc = "0.2.178"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.11.1"

[dev-dependencies]
test-case = "3.3.1"
tracing-test = "0.2.5"
